# JacksgrinCodeAdvent2022

./: .gitignore  README.md
Ex1/: CMakeLists.txt  main.cpp
Ex1/include/: CMakeLists.txt  elf.hpp
Ex1/src/: CMakeLists.txt  elf.cpp
Ex1_Function/: CMakeLists.txt  main  main.cpp
